deployments/vault/flux/ingressroute.yaml
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: vault
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`vault.apps.jakoberpf.de`) && PathPrefix(`/ui/`) # Hostname to match
      kind: Rule
      services: # Service to redirect requests to
        - name: vault
          port: 8200
  # Use the secret generated by cert-manager
  tls:
    secretName: vault-apps-erpf-de-tls
